chrome wrap bug fix

--- a/instance/public/css/xerxes-blue.css
+++ b/instance/public/css/xerxes-blue.css
@@ -293,6 +293,7 @@ a:hover {
 	margin-bottom: 3em;
 	padding-bottom: 1.5em;
 	padding-right: 2.2em;
+	white-space: nowrap; 
 }
 
 #bd p.spell-suggest {
